--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
           <img alt="" src="{{site.url}}/images/logo-grey.png" />
         </a>
       </h1>
-      <p>©2014 Devoll. All rights reserved.</p>
+      <p>©2019 Jake Volin. All rights reserved.</p>
       <div class='spacing'></div>
       <div class='spacing'></div>
     </div>
@@ -41,9 +41,9 @@
       <div class='spacing'></div>
       <h4>Contact us</h4>
       <ul>
-        <li>Phone: +86 (03) 9810 4612</li>
-        <li>Emial: info@devoll-team.com</li>
-        <li>Location: 41 Dean Street, London, UK</li>
+        <li>Phone: {{ site.contact.phone }}</li>
+        <li>Email: {{ site.contact.email }}</li>
+        <li>Location: {{ site.contact.location }}</li>
       </ul>
       <div class='spacing'></div>
       <ul class='socials'>
