--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
     <div class='large-3 medium-3 columns'>
       <h1>
         <a href='index.html'>
-          <img alt="" src="{{site.url}}/images/logo-grey.png" />
+          <img alt="" src="{{site.url}}/images/@jake/jv-logo-inverted.svg" />
         </a>
       </h1>
-      <p>©2019 Jake Volin. All rights reserved.</p>
+      <p>©{{ "now" | date: "%Y" }} Jake Volin. All rights reserved.</p>
       <div class='spacing'></div>
       <div class='spacing'></div>
     </div>
